# sknnr

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  check_estimator.py  pyproject.toml  setup.py  test.py  verify_regression_data.py
.github/workflows/: ci.yaml  lint.yaml  publish.yaml  test.yaml
docs/: abbreviations.md  mkdocs.yml  requirements.txt
docs/pages/: contributing.md  index.md  installation.md  usage.md
src/sklearn_knn/: __init__.py  _base.py  _euclidean.py  _gnn.py  _mahalanobis.py  _msn.py  _raw.py
src/sknnr/: __init__.py  _base.py  _euclidean.py  _gbnn.py  _gnn.py  _gnn_rda.py  _mahalanobis.py  _msn.py  _raw.py  _rfnn.py  _weighted_trees.py  types.py
tests/: conftest.py  datasets.py  test_datasets.py  test_estimators.py  test_port.py  test_regressions.py  test_transformers.py  test_utils.py
tests/data/: euc_moscow_ref_distances_k5.csv  euc_moscow_ref_neighbors_k5.csv  euclidean_moscow_ref_distances_k5.csv  euclidean_moscow_ref_predicted_unweighted_k5.csv  euclidean_moscow_ref_predicted_weighted_k5.csv  euclidean_moscow_trg_distances_k5.csv  euclidean_moscow_trg_neighbors_k5.csv  euclidean_moscow_trg_predicted_unweighted_k5.csv  euclidean_moscow_trg_predicted_weighted_k5.csv  gnn_cca_moscow_ref_distances_k5_c3.csv  gnn_cca_moscow_ref_neighbors_k5_c3.csv  gnn_cca_moscow_ref_predicted_unweighted_k5.csv  gnn_cca_moscow_ref_predicted_unweighted_k5_c3.csv  gnn_cca_moscow_ref_predicted_weighted_k5.csv  gnn_cca_moscow_ref_predicted_weighted_k5_c3.csv  gnn_cca_moscow_trg_distances_k5.csv  gnn_cca_moscow_trg_distances_k5_c3.csv  (+67 more)
(+134 files in other folders)
